--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,8 @@ Pillow==9.0.1
 pyparsing==3.0.7
 python-dateutil==2.8.2
 pytz==2021.3
-scikit-learn==1.0.2
+scikit-learn==1.3.2
+cython>=0.29.36
 scipy==1.8.0
 seaborn==0.11.2
 six==1.16.0
